Fixed grid card wrap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -179,13 +179,13 @@ section {
     }
 }
 
-@media all and (min-width: 368px) {
-    .grid {
-        grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
-    }
-}
 @media all and (min-width: 768px) {
     .grid {
-        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+    }
+}
+@media all and (min-width: 368px) {
+    .grid {
+        grid-template-columns: repeat(auto-fill, minmax(23rem, 1fr));
     }
 }
